# third-party-apis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
crates/auth_core/: Cargo.toml
crates/auth_core/src/: helpers.rs  lib.rs
crates/github/: Cargo.toml
crates/github/examples/: github_stars.rs
crates/github/fixtures/: issue_body.md  issue_body.txt
crates/github/src/: lib.rs  types.rs
crates/google/: Cargo.toml
crates/google/examples/: gcalendar.rs  gdrive.rs  gsheet.rs
crates/google/src/: auth.rs  lib.rs  types.rs
crates/google/src/services/: calendar.rs  mod.rs
crates/google/src/services/spreadsheets/: mod.rs  types.rs
crates/hubspot/: Cargo.toml
crates/hubspot/examples/: hubspot.rs
crates/hubspot/src/: lib.rs  types.rs
crates/microsoft/: Cargo.toml
crates/microsoft/examples/: microsoft_tasks.rs
crates/microsoft/src/: lib.rs  types.rs
crates/reddit/: Cargo.toml
crates/reddit/examples/: reddit_saved.rs
crates/reddit/src/: lib.rs  types.rs
google/: Cargo.toml
google/examples/: calendar.rs  list.rs
google/src/: auth.rs  lib.rs  main.rs  types.rs
