[package]
name = "google"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.2"
chrono = "0.4"
dotenv = "0.15"
dotenv_codegen = "0.15"
oauth2 = "4.2.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
url = "2.3"

[lib]
name = "libgoog"
