[package]
name = "google"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a1_notation = "0.4.1"
anyhow = "1.0"
async-trait = "0.1"
auth_core = { path = "../auth_core" }
bytes = "1.2"
chrono = "0.4.23"
log = "0.4"
oauth2 = "4.2.3"
reqwest = { version = "0.11", features = ["json"] }
rrule = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"
dotenv_codegen = "0.15"

[lib]
name = "libgoog"
